# theoremata

./: .gitattributes  .gitignore  Cargo.toml  README.md  REPOSITORY_AUDIT.md  conftest.py  pyproject.toml  setup.py
.cargo/: config.toml
.github/workflows/: ci.yml
app/: api.rs  config.rs  lib.rs  main.rs  tui.rs
app/tui/: cell.rs  command_popup.rs  composer.rs  event.rs  graph_panel.rs  mention.rs  mod.rs
assets/: .gitkeep
components/eval/tests/: test_adversarial_fixtures.py  test_adversarial_fixtures_live.py  test_aime_fixtures.py  test_benchmarks.py  test_curriculum.py  test_eval_execution.py  test_eval_harness.py  test_eval_integrity.py  test_eval_power.py  test_evolve.py  test_exposition.py  test_external_corpora.py  test_formal_conjectures.py  test_formalization_meta.py  test_formalizing_100.py  test_imo_bench_tracks.py  test_judge_binding.py  test_judge_order_swap.py  test_proof_calibration.py  test_proof_grader.py  test_trajectory_eval.py  test_verified_programming_honesty.py
components/graph/: citation.rs  db.rs  evidence.rs  mod.rs  model.rs  scheduler.rs
components/prover/: aristotle.rs  attempt_run.rs  axiom_audit.rs  decl_index_adapter.rs  declaration_lookup.rs  error_feedback.rs  exec.rs  formal.rs  hypothesis_audit.rs  infotree.rs  isabelle.rs  lean.rs  leandojo.rs  mod.rs  model.rs  proof_job.rs  proof_log.rs  reprover.rs  rocq.rs  statement_guard.rs  statement_preservation.rs  statement_quality.rs  subgoal_extract.rs  tests.rs  vacuity.rs  verify.rs  witness_search.rs
components/prover/backends/: aristotle.rs  candle.rs  external.rs  isabelle.rs  lean.rs  leandojo.rs  mod.rs  reprover.rs  rocq.rs
components/prover/session/: exec.rs  goal_state.rs  mod.rs  replay.rs  statement_guard.rs  verify.rs
components/prover/tests/: test_aristotle_mcp_client.py  test_geometry.py  test_geometry_algebraic.py  test_geometry_ddar.py  test_geometry_ddar2.py  test_geometry_rules.py  test_geometry_synth.py  test_geometry_synth2.py  test_geometry_wlog.py  test_hammer.py  test_isabelle_driver.py  test_rocq_driver.py  test_tactic_server.py
components/provider/: mod.rs
components/provider/tests/: test_model_provider.py
components/reason/: agent.rs  blueprint.rs  consolidate.rs  critic.rs  decompose.rs  falsification.rs  guard.rs  mcts.rs  mod.rs  plan_history.rs  research.rs  retry.rs  router.rs  sampler.rs  taint.rs  team.rs  workflow.rs
components/reason/critique/: critic.rs  guard.rs  guardrails.rs  memory.rs  mod.rs  statement_validity.rs  taint.rs  validity_seams.rs
components/reason/orchestration/: agent.rs  blueprint_generate.rs  chat.rs  (+13 more)
components/tools/: mod.rs
components/verify/: TEMPLATES.md  hardening.rs  lean_session.rs  mod.rs  paranoia_corpus.rs
demo/: README.md  theoremata.tape
docs/: BACKLOG.md  PLAN-MATH-AT-SCALE.md  PLAN.md  TRUST_BOUNDARIES.md  build-plan-hoc.md  ollama.md  running-locally.md  tui-audit.md  tui-redesign.md  tui-study-input.md  tui-study-render.md
docs/agentic-patterns-mining/: A1-chaining-routing-parallelization.md  A2-reflection-tooluse-planning-multiagent.md  A3-memory-learning-mcp-goals-hitl.md  A4-rag-interagent-resourceaware-guardrails.md  A5-eval-exploration-coding-agents.md  H1-foundations-llm-arch.md  H2-rl-training-eval.md  H3-harness-memory-rag.md  H4-patterns-mcp-skills-a2a.md  H5-frameworks-ui-reference.md
docs/atp-mining/: analysis-transcendentals.md  course-slides-part1.md  course-slides-part2.md  euclidean-vectors-geometry.md  floating-point-numerics.md  flyspeck-kepler.md  handbook-practical-logic.md  hol-light-manuals.md  hol-light-misc-short.md  hol-light-reflection-cas.md  hol-light-system.md  number-theory-misc.md  papers-and-foundations.md  survey-2212.md
docs/backlog/: backlog-atp.md  backlog-papers.md  backlog-rm-new.md  backlog-rm-top.md
docs/formal-systems/: AGDA-1LAB-METAMATH-SPEC.md  INTEGRATION-PLAN.md  MCP_INTEGRATION.md  isabelle.md  lean.md  rocq.md
docs/paper-mining/: README.md  advancing-math-research-alphaproof-nexus.md  alphageometry.md  alphageometry2-gold-medalist.md  alphamath-almost-zero.md  aristotle.md  atp-for-prolog-verification.md  automated-theorem-proving-survey.md  bfs-prover.md  deepmind-articles.md  deepseekmath-v2.md  first-order-automata-for-foltl.md  formarl.md  goedel-prover.md  hunyuanprover.md  improver.md  internlm-stepprover.md  kimina-prover.md  lean-copilot.md  lean-github.md  leandojo-v2.md  lego-prover.md  ml-and-automated-theorem-proving.md  on-mathematical-superintelligence.md  quantum-automated-theorem-proving.md  reliable-nl-proof-eval-proofgrader.md  robust-mathematical-reasoning.md  strong-pnt-paper.md  theorem-explain-agent.md  towards-autonomous-mathematics-research-aletheia.md  von-neumann-general-logical-theory-of-automata.md
docs/research/: alignment.md  repair.md
docs/resource-mining/: AgentMathOlympiadMedalist.md  AutoMathText-and-goldbach-collatz.md  DeepMath.md  Erdos1196.md  FlashSampling.md  FormalQualBench.md  FrontierMathOpen-Hypergraphs.md  KakeyaFiniteFields.md  LeanParanoia.md  M4R_Thesis.md  MathResearchPrompts.md  QED.md  README.md  RiemannHypothesisCurves.md  Sphere-Packing-Lean.md  alethfeld.md  estimates.md  ineqmath.md  mathcode.md  strongpnt-and-ZkLinalg.md
python/: pyproject.toml
python/tests/: test_decl_index.py  test_grader.py  test_lean_repl.py  test_lean_workspace.py  test_mcp_server.py  test_model_provider.py  test_retrieval.py  test_tools.py
python/theoremata_tools/: __init__.py  decl_index.py  estimates_adapter.py  falsify.py  grader.py  head_index.py  lean_repl.py  lean_soundness.py  mathlib_index.py  symbolic.py  worker.py
python_src/theoremata_tools/: __init__.py
scripts/: python_worker.py  use-model.sh
src/: agent.rs  chat.rs  config.rs  critic.rs  db.rs  main.rs  model.rs  router.rs  sampling.rs  tools.rs  tui.rs  workflow.rs
(+363 files in other folders)
