[package]
name = "theoremata"
version = "0.1.0"
edition = "2021"
description = "A graph-first agentic environment for mathematical research and formal verification"
license = "MIT"

[[bin]]
name = "theoremata"
path = "app/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.30"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
uuid = { version = "1.18", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.14"
