[project]
name = "theoremata-tools"
version = "0.1.0"
description = "Deterministic mathematical workers for Theoremata (split across components/*/python)"
requires-python = ">=3.11"
dependencies = ["sympy>=1.13", "litellm>=1.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# Optional accelerators. Every one is a soft, runtime-gated import: the workers
# fall back to deterministic stdlib paths when a package is absent, so these are
# never required to run or test the harness.
retrieval = ["rank-bm25>=0.2"]
train = ["torch>=2.0", "transformers>=4.40", "trl>=0.9", "scikit-learn>=1.3"]
all = [
    "rank-bm25>=0.2",
    "torch>=2.0",
    "transformers>=4.40",
    "trl>=0.9",
    "scikit-learn>=1.3",
]

# The importable code is split across component roots. The custom ``build_py``
# hook in ``setup.py`` assembles those fragments into one installable package
# instead of relying on the test-only ``conftest.py`` sys.path mutation.
[tool.setuptools]
include-package-data = true
packages = ["theoremata_tools"]
package-dir = {theoremata_tools = "python_src/theoremata_tools"}

[tool.pytest.ini_options]
testpaths = ["components"]
